[gd_scene load_steps=9 format=3 uid="uid://b4qayqdeo5jbx"]

[ext_resource type="Script" path="res://characters/player.gd" id="1_p5ask"]
[ext_resource type="SpriteFrames" uid="uid://cua6ykgqqug2o" path="res://assets/characters/main_chara.tres" id="2_xyj4k"]
[ext_resource type="AnimationLibrary" uid="uid://irqfihdn0bqm" path="res://assets/characters/player_curse_anims.res" id="3_jqbnj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ahii2"]
size = Vector2(10.4, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p7gb0"]
size = Vector2(28.4, 45.4)

[sub_resource type="Animation" id="Animation_vc4p2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpellArea/CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-0.2, -30)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpellArea/CollisionShape2D:shape")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource("RectangleShape2D_p7gb0")]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -11)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r8g14"]
_data = {
"RESET": SubResource("Animation_vc4p2")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l50oq"]
size = Vector2(20, 3.8)

[node name="Player" type="CharacterBody2D"]
scale = Vector2(5, 5)
script = ExtResource("1_p5ask")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.2)
shape = SubResource("RectangleShape2D_ahii2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0.2, -5.4)
sprite_frames = ExtResource("2_xyj4k")
animation = &"right"
offset = Vector2(0, -11)

[node name="SpellArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpellArea"]
position = Vector2(-0.2, -30)
shape = SubResource("RectangleShape2D_p7gb0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r8g14"),
"player_curse_anims": ExtResource("3_jqbnj")
}

[node name="DmgLabel" type="Label" parent="."]
visible = false
offset_left = -9.0
offset_top = -38.0
offset_right = 31.0
offset_bottom = -15.0
scale = Vector2(0.479479, 0.479479)
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Text"

[node name="AttackableArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackableArea"]
position = Vector2(4.47035e-08, -0.7)
shape = SubResource("RectangleShape2D_l50oq")
